# game-of-life-pygame

./: .gitignore  README.md  pyproject.toml
src/: color.py  main.py  ui_elements.py
