[project]
name = "game-of-life-pygame"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "bischoff-m", email = "bischoff_m@aim.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
